# src/docs/swagger-output.json
@@ -109,7 +109,11 @@
             "description": "Forbidden"
           }
         },
-        "security": []
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/auth/activation": {
